--- a/VerMet 16-12-17.ipynb
+++ b/VerMet 16-12-17.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "5                0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -444,15 +444,15 @@
        "5                 3   8.0500  35.0    male"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_labels = ['Pclass', 'Fare', 'Age', 'Sex']\n",
-    "df_new = df.loc[:, x_labels]\n",
-    "df_new.head()"
+    "X = df.loc[:, x_labels]\n",
+    "X.head()"
    ]
   },
   {
@@ -464,13 +464,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df_new['Sex'] = df_new['Sex'].map(lambda sex: 1 if sex == 'male' else 0)"
+    "X['Sex'] = X['Sex'].map(lambda sex: 1 if sex == 'male' else 0)"
    ]
   },
   {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -500,14 +500,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_new = df_new.dropna()\n",
-    "y = y[df_new.index.values]"
+    "X = X.dropna()\n",
+    "y = y[X.index.values]"
    ]
   },
   {
@@ -519,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +530,7 @@
        "            presort=False, random_state=241, splitter='best')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +538,7 @@
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "dtc = DecisionTreeClassifier(random_state=241)\n",
-    "dtc.fit(np.array(df_new.values), np.array(y.values))"
+    "dtc.fit(np.array(X.values), np.array(y.values))"
    ]
   },
   {
@@ -552,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -567,6 +565,178 @@
     "importance = pandas.Series(dtc.feature_importances_, index=x_labels)\n",
     "print(' '.join(importance.sort_values(ascending=False).head(2).index.values))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Часть 2.\n",
+    "\n",
+    "Учитывая результаты решения предыдущих примеров, построить модель, прогнозирующую, спасется человек на Титанике или нет.\n",
+    "\n",
+    "Модель построить для двух алгоритмов, «метода ближайших соседей» и «логистической регрессии»\n",
+    "\n",
+    "Проверку модели произвести с помощью скользящего контроля.\n",
+    "\n",
+    "Результат – сравнить точность работы модели по двум алгоритмам, в процентах с округлением до сотых."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.15, random_state=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  15 out of  15 | elapsed:   10.4s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({'knn__n_neighbors': 8}, 0.84259259259259256)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#определение наилучшего числа соседей\n",
+    "knn_params = {'knn__n_neighbors': [3, 5, 8]}\n",
+    "knn_pipe = Pipeline([('scaler', StandardScaler()), ('knn', KNeighborsClassifier(n_jobs=-1))])\n",
+    "knn_grid = GridSearchCV(knn_pipe, knn_params,cv=5, n_jobs=-1,verbose=True)\n",
+    "knn_grid.fit(X_test, y_test)\n",
+    "knn_grid.best_params_, knn_grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score for kNN:  86.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy score for kNN: ',round(accuracy_score(y_test, knn_grid.predict(X_test))*100,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  15 out of  15 | elapsed:    8.4s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({'lr__C': 1}, 0.76851851851851849)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "lr_params = {'lr__C': [1, 10, 100]}\n",
+    "lr_pipe = Pipeline([('scaler', StandardScaler()), ('lr', LogisticRegression())])\n",
+    "lr_grid = GridSearchCV(lr_pipe, lr_params,cv=5, n_jobs=-1,verbose=True)\n",
+    "lr_grid.fit(X_test, y_test)\n",
+    "lr_grid.best_params_, lr_grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score for LogReg:  80.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy score for LogReg: ',round(accuracy_score(y_test, lr_grid.predict(X_test))*100, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Точность Logistic Regression 80.56%, точность kNN - 86.11% "
+   ]
   }
  ],
  "metadata": {
@@ -574,6 +744,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
